[pydocstyle] # Not supported
match-dir = "src"

[mypy] # Not supported, yet
ignore_missing_imports = true

[tool.pylint.messages_control]
disable = [
    "C",
    "logging-fstring-interpolation",
    "global-statement",
]
ignored-modules = "torch"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
# addopts = "--electra_model electra-small-pytorch --tagger /home/haukur/Resources/Models/POS/tagger-v2.0.0.pt"

[tool.poetry]
name = "pos"
version = "2.0.3"
description = "A Part-of-Speech tagger for Icelandic"
authors = ["Haukur <haukurpalljonsson@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/cadia-lvl/pos"
packages = [
    {include = "pos", from = "src"}
]
[tool.poetry.scripts]
pos = "pos.cli:cli"

[tool.poetry.dependencies]
python = "^3.6.2"
torch = "^1.7.0"
tqdm = "^4.48.2"
click = "^7.1.2"
transformers = "~4.1.1"
reynir = "^2.10.1"

[tool.poetry.dev-dependencies]
pydocstyle = "^5.0.2"
pytest = "^6.0.1"
tensorboard = "^2.3.0"
rope = "^0.17.0"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
